--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
+  "scripts": {
+    "start": "npx retool-ccl dev"
+  },
   "engines": {
     "node": ">=20.0.0"
   },
